<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <!-- About the device -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_server"
            android:textSize="40sp" android:layout_gravity="center"/>
        <TextView
            android:id="@+id/thisIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:gravity="right"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ip"
                android:textSize="35sp" />
            <EditText
                android:id="@+id/editThisIp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                android:textSize="35sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/serverButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                tools:layout_editor_absoluteX="159dp"
                tools:layout_editor_absoluteY="439dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                />
            <!--RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:progress="25"
                    android:visibility="invisible"
                    android:layout_centerHorizontal="true"/>
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:clickable="true"
                    />
            </RelativeLayout-->
            <Button
                android:id="@+id/receivingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive"
                tools:layout_editor_absoluteX="159dp"
                tools:layout_editor_absoluteY="439dp"
                android:layout_marginTop="5dp"
                android:visibility="invisible"
                />
        </LinearLayout>
    </LinearLayout>
    <!-- Join device -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_server"
            android:textSize="40sp"
            android:textAlignment="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/ip"
                    android:textSize="35sp" />
                <EditText
                    android:id="@+id/editJoinIp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textSize="35sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            <Button
                android:id="@+id/joinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                tools:layout_editor_absoluteX="159dp"
                tools:layout_editor_absoluteY="439dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                />
            <!--RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <ProgressBar
                    android:id="@+id/progressBarJoin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:progress="25"
                    />
                <ImageView
                    android:id="@+id/imageViewJoin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    android:clickable="true"
                    />
            </RelativeLayout-->
                <Button
                    android:id="@+id/sharingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    tools:layout_editor_absoluteX="159dp"
                    tools:layout_editor_absoluteY="439dp"
                    android:layout_marginTop="5dp"
                    android:visibility="invisible"
                    />
        </LinearLayout>
    </LinearLayout>
    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/video"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:src="@drawable/ic_phone_device"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <Button
            android:id="@+id/testget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test receive"/>
        <Button
            android:id="@+id/testgive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test share"/>
        </LinearLayout>
    </LinearLayout-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/options"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</LinearLayout>